# shot2path

./: CLAUDE.md  Cargo.toml  README.md
src/: capture.rs  clipboard.rs  main.rs  shortcut.rs  startup.rs  tray.rs  util.rs
