[package]
name = "shot2path"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
winreg = "0.56"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
